2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mqueue.cxx: Fix multi-line string literal warning.

2003-01-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/posix.sgml: Document them.

	* src/mqueue.cxx (mq_timedreceive): Make fully compliant by dealing
	with bogus timeouts.
	(mq_timedsend): Ditto.

2003-01-13  Dmitriy Korovkin  <dkorovkin@rambler.ru>

	* src/mqueue.cxx (mq_timedsend): New function. Implementing POSIX
	1003.1d draft definition.
	(mq_timedreceive): Ditto.

2002-12-10  Wade Jensen  <waj4news@cox.net>
2002-12-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/mutex.cxx (pthread_cond_timedwait): Initialize clock converters
	only once ever.

2002-11-26  Nick Garnett  <nickg@ecoscentric.com>

	* src/signal.cxx: Changed the three routines added in the last
	change so that they can be called safely from non-POSIX threads.

2002-11-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/signal.cxx: Added three exportable routines that may be used
	by other packages to manipulate the signal mask, test for
	deliverable signals, and have signals delivered at controlled
	points.

	* include/export.h: Added macros to export signal mask management,
	detection and delivery to other packages.

2002-11-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx: Use <cyg/infra/diag.h> for diag_printf
	prototype.

2002-05-23  Jesper Skov  <jskov@redhat.com>

	* cdl/posix.cdl: Don't build tests using signals when posix
	signals are disabled.

2002-05-21  Jesper Skov  <jskov@redhat.com>

	* tests/mutex3.c: Added an NA check.

2002-04-09  Jonathan Larmour  <jlarmour@redhat.com>

	* src/signal.cxx (cyg_deliver_signals): Don't assert here for an
	unhandled signal (unless there's no _exit). Trace it though.

2002-04-08  Jonathan Larmour  <jlarmour@redhat.com>

	* src/sem.cxx (sem_getvalue): return 0, and put value in *sval.

2002-04-03  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/posix.cdl: Allow clocks to be configured again.
